--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,18 +16,16 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".StartActivity" />
-
-        <activity android:name=".LoginActivity" >
-
+        <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ListItemsActivity" />
-
-        <activity android:name=".ChatWindow"/>
-
+        <activity android:name=".ChatWindow" />
+        <activity android:name=".ChatDatabaseHelper"></activity>
     </application>
+
 </manifest>
