--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity android:name=".ListItemsActivity" />
         <activity android:name=".ChatWindow" />
-        <activity android:name=".ChatDatabaseHelper"></activity>
+        <activity android:name=".ChatDatabaseHelper" />
+        <activity android:name=".WeatherForecast"></activity>
     </application>
 
 </manifest>
