--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".ChatWindow" />
         <activity android:name=".ChatDatabaseHelper" />
         <activity android:name=".WeatherForecast" />
-        <activity android:name=".MessageDetails"></activity>
+        <activity android:name=".MessageDetails" />
+        <activity android:name=".MessageFragment"></activity>
     </application>
 
 </manifest>
