--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Multiple_Choice_Quiz_Creater" />
+        <activity android:name=".Patient_Intake_form" />
+        <activity android:name=".Movie_Information" />
+        <activity android:name=".OCTranspo_Bus_Route_App"></activity>
     </application>
 
 </manifest>
