--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,17 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
-        <activity android:name=".StartActivity" />
-        <activity android:name=".LoginActivity">
+        android:supportsRtl="true"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
+        >
+        <activity android:name=".StartActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".LoginActivity" />
         <activity android:name=".ListItemsActivity" />
         <activity android:name=".ChatWindow" />
         <activity android:name=".ChatDatabaseHelper" />
@@ -31,7 +33,7 @@
         <activity android:name=".MessageFragment" />
         <activity
             android:name=".TestToolbar"
-            android:label="@string/title_activity_test_toolbar"></activity>
+            android:label="@string/title_activity_test_toolbar" />
     </application>
 
 </manifest>
