--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,7 +18,6 @@
         </activity>
         <activity android:name=".Quiz_Creater" />
         <activity android:name=".ImportQuiz" />
-        <activity android:name=".test" />
         <activity android:name=".CreateQuiz" />
         <activity android:name=".GetStat" />
         <activity android:name=".QuizDetails" />
